--- a/_assets/css/sass/master.scss
+++ b/_assets/css/sass/master.scss
@@ -4,6 +4,7 @@
 
 
 @import '../../../bower_components/bourbon/app/assets/stylesheets/bourbon';
+//$visual-grid:true;
 @import '../../../bower_components/neat/app/assets/stylesheets/neat';
 
 
